add multiple context

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -11,5 +11,11 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=license-default;MultipleActiveResultSets=true;Uid=license-exam;Password=license-exam@1;",
+    "AuthConnection": "Data Source=localhost;Initial Catalog=license-auth;MultipleActiveResultSets=true;Uid=license-exam;Password=license-exam@1;",
+    "QAConnection": "Data Source=localhost;Initial Catalog=license-qa;MultipleActiveResultSets=true;Uid=license-exam;Password=license-exam@1;",
+    "ExamConnection": "Data Source=localhost;Initial Catalog=license-exam;MultipleActiveResultSets=true;Uid=license-exam;Password=license-exam@1;",
   }
 }
